[project]
name = "fletchling-importer"
version = "0.1.0"
description = "Import geofence areas using fletchling API"
authors = [{ name="unseenmagik"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "requests",
]

[project.scripts]
fletchling-import = "fletchling_importer.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
